Improve API DJango functionality and design the Angular Material UI

--- a/Angular App/transparentcdn/src/index.html
+++ b/Angular App/transparentcdn/src/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+  <!--<app-books-list></app-books-list>-->
   <app-root></app-root>
 </body>
 </html>
